tests/machine/x/kotlin/group_by_conditional_sum.error
line 3:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/group_by_conditional_sum.kt:3:26: error: unresolved reference: toInt
    for (n in list) s += toInt(n)
                         ^
/workspace/mochi/tests/machine/x/kotlin/group_by_conditional_sum.kt:29:23: error: unresolved reference: toBool
        __res.add(if (toBool((x as MutableMap<*, *>)["flag"])) (x as MutableMap<*, *>)["val"] else 0)
                      ^
/workspace/mochi/tests/machine/x/kotlin/group_by_conditional_sum.kt:41:17: error: unresolved reference: key
}.sortedBy { it.key as Comparable<Any> }
                ^

  2:     var s = 0
  3:     for (n in list) s += toInt(n)
  4:     return s
